--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format:check": "prettier . --check",
     "prepare": "husky",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:unit-watch": "jest --watch",
+    "test:e2e": "playwright test",
+    "test:e2e-ui": "playwright test --ui"
   },
   "dependencies": {
     "next": "15.3.0",
@@ -23,6 +25,7 @@
     "@eslint/eslintrc": "^3.2.0",
     "@eslint/js": "^9.18.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.4.0",
+    "@playwright/test": "^1.51.1",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -37,10 +40,12 @@
     "eslint": "^9.18.0",
     "eslint-config-next": "^15.1.4",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-playwright": "^2.2.0",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "^8.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "playwright": "^1.51.1",
     "prettier": "^3.4.2",
     "prettier-plugin-sort-json": "^4.1.1",
     "tailwindcss": "^4",
